--- a/index.html
+++ b/index.html
@@ -143,33 +143,35 @@
           </article>
         </section>
       </main>
-      <aside>
-        <section>
-          <h2>Articoli correlati</h2>
-          <p>
-            <span><a href="#">Validare il codice Html</a></span
-            ><br />Categoria: develop<br />Data: 18/09/2022
-          </p>
-          <p>
-            <span><a href="#">Correggere la sintassi</a></span
-            ><br />Categoria: develop<br />Data: 16/09/2020
-          </p>
-          <p>
-            <span><a href="#">Meno Kb nella pagina</a></span
-            ><br />Categoria: ottimizzazione<br />Data: 30/09/2020
-          </p>
-        </section>
-        <section>
-          <h2>
-            Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
-            nostra newsletter!
-          </h2>
-          <form onsubmit="alert('Registrazione inviata!')">
-            <input type="email" placeholder="Inserisci la tua mail" />
-            <button type="submit">Iscriviti!</button>
-          </form>
-        </section>
-      </aside>
+      <div id="aside">
+        <aside>
+          <section>
+            <h2>Articoli correlati</h2>
+            <p>
+              <span><a href="#">Validare il codice Html</a></span
+              ><br />Categoria: develop<br />Data: 18/09/2022
+            </p>
+            <p>
+              <span><a href="#">Correggere la sintassi</a></span
+              ><br />Categoria: develop<br />Data: 16/09/2020
+            </p>
+            <p>
+              <span><a href="#">Meno Kb nella pagina</a></span
+              ><br />Categoria: ottimizzazione<br />Data: 30/09/2020
+            </p>
+          </section>
+          <section>
+            <h2>
+              Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
+              nostra newsletter!
+            </h2>
+            <form onsubmit="alert('Registrazione inviata!')">
+              <input type="email" placeholder="Inserisci la tua mail" />
+              <button type="submit">Iscriviti!</button>
+            </form>
+          </section>
+        </aside>
+      </div>
       <footer>
         <p>Blog Epicode &copy; 2023</p>
         <p>
